adicionando tabela de dados cadastrados

--- a/index.html
+++ b/index.html
@@ -88,6 +88,23 @@
         </div>
       </form>
     </div>
+    <div class="data-table">
+      <h2>Inscrições realizadas</h2>
+      <table id="table">
+        <thead>
+          <tr>
+            <th>Nome</th>
+            <th>E-mail</th>
+            <th>Sexo</th>
+            <th>Curso</th>
+            <th>Descrição</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Dados inseridos aqui via JavaScript -->
+        </tbody>
+      </table>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
